Pankaj | Fixing - Alignment in chief complaint in observation tab

--- a/ui/app/styles/common/_bahmniGlobal.scss
+++ b/ui/app/styles/common/_bahmniGlobal.scss
@@ -40,7 +40,7 @@ input[file-upload] {
         margin-left: 10px;
       }
       .offset-label {
-        padding-left: 230px;
+        padding-left:0px;
       }
     }
   }
